force-app/main/default/objects/FinServ__IdentificationDocument__c/FinServ__IdentificationDocument__c.object-meta.xml
<CustomObject>
    <description>Represents information about documents used to verify a person&apos;s identity.</description>
    <label>Identification Document</label>
    <nameField>
        <displayFormat>DOC-{000000000}</displayFormat>
        <label>Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>