force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__Account__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Identification Document</relationshipLabel>
    <relationshipName>IdentificationDocument</relationshipName>
    <type>Lookup</type>
</CustomField>