force-app/main/default/objects/FinServ__IdentificationDocument__c/validationRules/FinServ__ExpDateCannotBeLaterThanStart.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__ExpDateCannotBeLaterThanStart</fullName>
    <active>true</active>
    <description>Error message when the expiration date is earlier than the issue date.</description>
    <errorConditionFormula>FinServ__IssueDate__c &gt; FinServ__ExpirationDate__c</errorConditionFormula>
    <errorMessage>The expiration date can&apos;t be earlier than the issue date.</errorMessage>
</ValidationRule>