force-app/main/default/objects/FinServ__IdentificationDocument__c/validationRules/FinServ__VerificationDateTimeCannotBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__VerificationDateTimeCannotBeInFuture</fullName>
    <active>true</active>
    <description>Error message when the verification date and time are in the future.</description>
    <errorConditionFormula>FinServ__VerifiedOn__c &gt; NOW()</errorConditionFormula>
    <errorMessage>Verification date and time can&apos;t be in the future.</errorMessage>
</ValidationRule>